# IA

./: .gitignore  README.md
TP_1/: README.md  pyproject.toml
TP_1/enunciado/: README.md
TP_1/hanoi_tower/: resolucion.ipynb  resolucion.py  search.py
TP_1/hanoi_tower/simulator/: sequence.json
TP_1/teoria/: RESOLUCION.md
TP_2/: README.md  pyproject.toml
TP_2/resolucion/: ayuda.ipynb  resolucion.ipynb
TP_3/: README.md  pyproject.toml
TP_3/resolucion/: resolucion.ipynb
