[tool.poetry]
name = "tp-2"
version = "0.1.0"
description = "This Poetry package contains the solution to Delivery N. 2"
authors = ["Diego <sarinadiego@gmail.com>"]
readme = "README.md"
packages = [{include = "tp_2"}]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
