[tool.poetry]
name = "tp-3"
version = "0.1.0"
description = "This Poetry package contains the solution to Delivery N. 3"
authors = ["Diego <sarinadiego@gmail.com>"]
readme = "README.md"
packages = [{include = "tp_3"}]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true